Update appSettings for the JWT options

--- a/service-app/crypto-app/appsettings.json
+++ b/service-app/crypto-app/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=cryptoapp.db"
+  },
+  "JwtOptions": {
+      "Secret": "YourNewSuperSecretKeyThatIsAtLeast256BytesLong...",
+      "ValidIssuer": "CryptoAppIssuer",
+      "ValidAudience": "CryptoAppAudience",
+      "ExpiresInMinutes": 60,
+      "RefreshTokenExpiresInDays": 7,
+      "AccessTokenMinLength": 256
   }
 }
