--- a/service-app/crypto-app/appsettings.Development.json
+++ b/service-app/crypto-app/appsettings.Development.json
@@ -7,5 +7,13 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=cryptoapp.db"
-  }
+  },
+  "JwtOptions": {
+    "Secret": "YourNewSuperSecretKeyThatIsAtLeast256BytesLong...",
+    "ValidIssuer": "CryptoAppIssuer",
+    "ValidAudience": "CryptoAppAudience",
+    "ExpiresInMinutes": 60,
+    "RefreshTokenExpiresInDays": 7,
+    "AccessTokenMinLength": 256
+}
 }
