Added email options

--- a/service-app/crypto-app/appsettings.json
+++ b/service-app/crypto-app/appsettings.json
@@ -16,5 +16,11 @@
       "ExpiresInMinutes": 60,
       "RefreshTokenExpiresInDays": 7,
       "AccessTokenMinLength": 256
+  },
+  "EmailOptions": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "info.cryptocooker@gmail.com",
+    "SmtpPass": "zfxn tkkg yzqc cobs"
   }
 }
