--- a/service-app/crypto-app/appsettings.Development.json
+++ b/service-app/crypto-app/appsettings.Development.json
@@ -16,6 +16,9 @@
     "RefreshTokenExpiresInDays": 7,
     "AccessTokenMinLength": 256
   },
+  "AppSettings": {
+    "AppUrl": "exp://192.168.1.150:8081"
+  },
   "EmailOptions": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
